--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,1 +1,14 @@
+name: "My first Action"
 
+on: workflow_dispatch
+env:
+  TEST_NAME = "From Minsk"
+jobs:
+  test:
+    runs-on: ubuntu
+    steps:
+      - name: First test
+        run: "echo Hello world ${{ env.TEST_NAME }}"
+        
+        
+  
