--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: First test
-        run: echo $JSON
+        run: echo $JSON | jq
     env:
       JSON: ${{ toJSON(github) }}
         
