--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -2,6 +2,10 @@ name: "My first Action"
 
 on: 
   workflow_dispatch:
+  pull_request:
+    types: opened
+  push:
+    
 env:
   TEST_NAME: "From Minsk"
 jobs:
