--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -9,25 +9,26 @@ env:
   TEST_NAME: "From Minsk"
     
 jobs:
-  test:
+  test-job:
     runs-on: ubuntu-latest
     steps:
       - name: Output commands
         run: echo $JSON | jq
     env:
       JSON: ${{ toJSON(github.event) }}
-  artifact:
+  artifact-job:
     runs-on: ubuntu-latest
     steps:
       - name: Copy code
         uses: actions/checkout@v3
       - name: Print file
+        working-directory: 
         run : cat 1.txt
       - name: Upload Arctifact
         uses: action/upload-artifact@v4
         with:
           name: file-artifact
-          path: .github/workflows/first-action.yml
+          path: 1.txt
 
         
         
