--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Print file
         working-directory: /test
-        run: cat 2.txt
+        run: test/cat 2.txt
 
 
         
