--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Copy code
         uses: actions/checkout@v3
       - name: Print file
-        working-directory: /test
+        #working-directory: /test
         run: cat test/2.txt
 
 
