--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -19,7 +19,7 @@ jobs:
         run: echo $JSON | jq
     env:
       JSON: ${{ toJSON(github.event) }}
-  artifact-job:
+  artifact-job-upload:
     runs-on: ubuntu-latest
     steps:
       - name: Copy code
@@ -32,7 +32,14 @@ jobs:
         with:
           path: test
           name: Upload-Artifact
-
+  artifact-job-dowload:
+    runs-on: ubuntu-latest
+    needs: artifact-job-upload
+    steps:
+      - name: Get artifact-upload
+        uses: actions/download-artifact@v3
+        with:
+          name: Upload-Artifact
         
         
   
