--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: Upload-Artifact
-        
+      - name: ls files
+        run: ls -la
         
   
