--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,12 +1,8 @@
 name: "My first Action"
 
 on:
-  push:
-    branches:
-      - main 
   workflow_dispatch:
-  pull_request:
-    types: opened
+ 
     
 env:
   TEST_NAME: "From Minsk"
@@ -42,5 +38,19 @@ jobs:
           name: Upload-Artifact
       - name: ls files
         run: ls -la
-        
-  
+  nexus:
+    runs-on: ubuntu-latest
+    needs: [test-job, artifact-job-upload, artifact-job-dowload]
+    steps:
+      - name: Nexus Repo Publish
+        uses: sonatype-nexus-community/nexus-repo-github-action@master
+        with:
+          serverUrl: http://5.tcp.eu.ngrok.io:11905
+          username: admin
+          password: ${{ NEXUS_PASSWORD }}
+          format: maven2
+          repository: my-first-nexus-repo
+          coordinates: groupId=com.example artifactId=app version=1.0.0
+          assets: extension=jar
+          filename: ./test/file.jar
+       
