--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -42,6 +42,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test-job, artifact-job-upload, artifact-job-dowload]
     steps:
+      - name: copy code
+        uses: actions/checkout@v3
       - name: Nexus Repo Publish
         uses: sonatype-nexus-community/nexus-repo-github-action@master
         with:
