--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -52,7 +52,7 @@ jobs:
           password: ${{ secrets.NEXUS_PASSWORD }}
           format: maven2
           repository: my-first-nexus-repo
-          coordinates: groupId=com.example artifactId=app version=1.0.0
+          coordinates: groupId=file artifactId=app version=1.0.0
           assets: extension=jar
           filename: ./test/file.jar
        
