--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -47,11 +47,11 @@ jobs:
       - name: Nexus Repo Publish
         uses: sonatype-nexus-community/nexus-repo-github-action@master
         with:
-          serverUrl: http://5.tcp.eu.ngrok.io:11905
+          serverUrl: http://5.tcp.eu.ngrok.io:11905/repository/maven-snapshots/
           username: admin
           password: ${{ secrets.NEXUS_PASSWORD }}
           format: maven2
-          repository: my-first-nexus-repo
+          repository: maven-snapshots
           coordinates: groupId=file artifactId=app version=1.0.0
           assets: extension=jar
           filename: ./test/file.jar
