--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -15,44 +15,21 @@ jobs:
         run: echo $JSON | jq
     env:
       JSON: ${{ toJSON(github.event) }}
-  artifact-job-upload:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Copy code
-        uses: actions/checkout@v3
-      - name: Print file
-        #working-directory: /test
-        run: cat test/2.txt
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          path: test
-          name: Upload-Artifact
-  artifact-job-dowload:
-    runs-on: ubuntu-latest
-    needs: artifact-job-upload
-    steps:
-      - name: Get artifact-upload
-        uses: actions/download-artifact@v3
-        with:
-          name: Upload-Artifact
-      - name: ls files
-        run: ls -la
+
   nexus:
-    runs-on: ubuntu-latest
-    needs: [test-job, artifact-job-upload, artifact-job-dowload]
+    runs-on: ubuntu-latest 
     steps:
       - name: copy code
         uses: actions/checkout@v3
       - name: Nexus Repo Publish
         uses: sonatype-nexus-community/nexus-repo-github-action@master
         with:
-          serverUrl: http://5.tcp.eu.ngrok.io:11905/repository/maven-snapshots/
-          username: admin
+          serverUrl: http:////0.tcp.eu.ngrok.io:15138
+          username: karate
           password: ${{ secrets.NEXUS_PASSWORD }}
           format: maven2
-          repository: maven-snapshots
+          repository: karate-repo
           coordinates: groupId=file artifactId=app version=1.0.0
           assets: extension=jar
-          filename: ./test/file.jar
+          filename: java-app-1.0-SNAPSHOT.jar
        
