--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -29,7 +29,7 @@ jobs:
           password: ${{ secrets.NEXUS_PASSWORD }}
           format: maven2
           repository: maven-releases
-          coordinates: groupId=file artifactId=app version=1.0.0
+          coordinates: groupId=file artifactId=app2 version=2.0.0
           assets: extension=jar
           filename: java-app-1.0-SNAPSHOT.jar
        
