--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       JSON: ${{ toJSON(github.event) }}
 
-  nexus:
+  #nexus:
     runs-on: ubuntu-latest 
     steps:
       - name: copy code
@@ -33,3 +33,15 @@ jobs:
           assets: extension=jar
           filename: java-app-1.0-SNAPSHOT.jar
        
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    permissions: read-all
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
